se implemento la consutal de cuentas por cliente
